Closes #19
